--- a/index.html
+++ b/index.html
@@ -48,9 +48,17 @@
       <h2>Sobre nós</h2>
       <p class="secao--subtitulo">conheça um pouco sobre a Lutech</p>
       <div class="container-sobre">
-        <img src="gffgfg-min.jpg" alt="" class="imagem-cabo">
+        <video
+        src="pexels-vitaliy-izonin-9693520.mp4"
+        autoplay="true"
+        preload="auto"
+        muted
+        loop
+        class="imagem-cabo"
+      ></video>
         <div class="card-sobre">
-          <p>Conecte-se com a inovação em cabeamento estruturado. A Lutech é uma empresa recente no mercado, mas já conquistou clientes em todo o país com soluções de alta qualidade e tempo de entrega ágil. Nossa equipe é formada por profissionais qualificados e experientes, prontos para oferecer o melhor suporte técnico. </p>
+            <h3>Conecte-se com a inovação em cabeamento estruturado.</h3>
+          <p> A Lutech é uma empresa recente no mercado, mas já conquistou clientes em todo o país com soluções de alta qualidade e tempo de entrega ágil. Nossa equipe é formada por profissionais qualificados e experientes, prontos para oferecer o melhor suporte técnico. </p>
           <button class="btn">Conheça a Lutech.</button>
         </div>
       </div>
