--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
 
       <section class="secao-servicos">
         <div>
-          <h2>Produtos/Serviços</h2>
+          <h2>Serviços</h2>
           <p class="secao--subtitulo">encontre a solução para sua empresa</p>
         </div>
         <ul>
           <li>
-            <h3>Cabeamento estruturado</h3>
+            <h3>Cabeamento Estruturado</h3>
             <p>
               Melhore sua infraestrutura de rede e ganhe eficiência. O
               cabeamento estruturado é um investimento inteligente para empresas
@@ -113,7 +113,7 @@
             </p>
           </li>
           <li>
-            <h3>fibra optica</h3>
+            <h3>Fibra Optica</h3>
             <p>
               Maximize a qualidade e a estabilidade da sua rede de comunicação.
               Os serviços de passagem, manutenção e fusão de fibra óptica da
