--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
   </head>
   <body>
     <main>
-      <section class="secao-inicio">
+      <section class="secao-inicio" id="inicio">
         <header class="header-principal">
           <nav>
             <ul>
-              <li><a href="#">Inicio</a></li>
-              <li><a href="#">Sobre</a></li>
-              <li><a href="#">Serviços</a></li>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">Contato</a></li>
+              <li><a href="#inicio">Inicio</a></li>
+              <li><a href="#sobre">Sobre</a></li>
+              <li><a href="#servico">Serviços</a></li>
+              <li><a href="#faq">FAQ</a></li>
+              <li><a href="#contato">Contato</a></li>
             </ul>
           </nav>
         </header>
@@ -68,7 +68,7 @@
         </div>
       </section>
 
-      <section class="secao-sobre">
+      <section class="secao-sobre" id="sobre">
         <h2>Sobre nós</h2>
         <p class="secao--subtitulo">conheça um pouco sobre a Lutech</p>
         <div class="container-sobre">
@@ -94,7 +94,7 @@
         </div>
       </section>
 
-      <section class="secao-servicos">
+      <section class="secao-servicos" id="servico">
         <div>
           <h2>Serviços</h2>
           <p class="secao--subtitulo">encontre a solução para sua empresa</p>
@@ -138,7 +138,7 @@
         </ul>
       </section>
 
-      <section class="faq">
+      <section class="faq" id="faq">
         <h1>Perguntas Frequentes</h1>
         <div class="wrapperPergunta">
           <div class="pergunta">
@@ -202,7 +202,7 @@
         </div>
       </section>
 
-      <section class="section-contato">
+      <section class="section-contato" id="contato">
         <div class="container-contato">
           <div class="container-form">
             <form
