--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsividade.css" />
     <link rel="stylesheet" href="reset.css" />
   </head>
   <body>
@@ -49,22 +50,22 @@
             </ul>
           </nav>
         </header>
-        <img src="logo.png" alt="" srcset="" class="logo" />
         <video
-          src="pexels-c-technical-6153453.mp4"
-          autoplay="true"
-          preload="auto"
-          muted
+        src="pexels-c-technical-6153453.mp4"
+        autoplay="true"
+        preload="auto"
+        muted
         ></video>
-
+        
         <div class="wrapper-slogan">
-          <h1>
-            Confie na <span>Lutech</span> para conectar seu negócio ao sucesso
-          </h1>
-          <p>Cabeamento estruturado de ponta a ponta</p>
           <div>
-            <button class="btn">Contato</button>
+            <h1>
+              Confie na <span>Lutech</span> para conectar seu negócio ao sucesso
+            </h1>
+            <p>Cabeamento estruturado de ponta a ponta</p>
+            <a href="#contato"><button class="btn"> Contato </button> </a>
           </div>
+          <img src="logo.png" alt="" srcset="" class="logo" />
         </div>
       </section>
 
@@ -89,7 +90,7 @@
               qualificados e experientes, prontos para oferecer a melhor
               solução.
             </p>
-            <button class="btn">Conheça a Lutech.</button>
+            <a href="sobre.html"><button class="btn">Conheça a Lutech.</button></a>
           </div>
         </div>
       </section>
@@ -249,6 +250,7 @@
 
               <button class="btn-send">Enviar</button>
             </form>
+
             <div class="text-contact">
               <h3>Contato</h3>
               <p>
@@ -265,6 +267,7 @@
                 >
               </div>
             </div>
+            
           </div>
         </div>
       </section>
