--- a/index.html
+++ b/index.html
@@ -267,14 +267,34 @@
                 >
               </div>
             </div>
-            
+
           </div>
         </div>
       </section>
     </main>
     <footer>
-      <p>Direitos reservados &copy; 2023 - Lutech informatica</p>
-      <p>CNPJ: 43.189.321/0001-99</p>
+      <footer class="section-footer">
+        <div class="infos-footer">
+            <img src="IMG-20220609-WA0000-removebg-preview.png" alt="logo da Lutech" class="logo-footer">
+            <div class="address">
+                <span><i class="fa-solid fa-location-dot"></i> Endereço</span>
+                <p>Rua Deocleciano de oliveira filho, 532 - Sala 03 Parque Santo Antonio, São Paulo <br>
+                CEP: 05.834-000 </p>
+            </div>
+            <div class="contact-footer">
+                <span><i class="fa-solid fa-user"></i> Contatos</span>
+                <p> (11) 94735-4273</p>
+                <p> (11) 4580-3915</p>
+                <a href="mailto:contato@lutechinformatica.com.br" class="e-mail">contato@lutechinformatica.com.br</a>
+            </div>
+            <div class="socials-media">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-facebook-square"></i>
+            </div>
+        </div>
+        <span class="cnpj">CNPJ: 43.189.321/0001-99</span>
+    </footer>
     </footer>
 
     <script src="faq.js"></script>
