--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         autoplay="true"
         preload="auto"
         muted
+        loop
         ></video>
         
         <div class="wrapper-slogan">
