div sobre o video

--- a/index.html
+++ b/index.html
@@ -50,13 +50,16 @@
             </ul>
           </nav>
         </header>
-        <video
-        src="pexels-c-technical-6153453(1).mp4"
-        autoplay="true"
-        preload="auto"
-        muted
-        loop
-        ></video>
+        <div>
+          <video
+          src="pexels-c-technical-6153453(1).mp4"
+          autoplay="true"
+          preload="auto"
+          muted
+          loop
+          ></video>
+        </div>
+        
         
         <div class="wrapper-slogan">
           <div>
