container main video

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </ul>
           </nav>
         </header>
-        <div>
+        <div class="container-video-main">
           <video
           src="pexels-c-technical-6153453(1).mp4"
           autoplay="true"
