--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
             <img src="IMG-20220609-WA0000-removebg-preview.png" alt="logo da Lutech" class="logo-footer">
             <div class="address">
                 <span><i class="fa-solid fa-location-dot"></i> Endereço</span>
-                <p>Rua Deocleciano de oliveira filho, 532 - Sala 03 Parque Santo Antonio, São Paulo <br>
-                CEP: 05.834-000 </p>
+                <p>Rua shigueki kadumoto, 73 - Parque Albina, Taboão da Serra - SP <br>
+                CEP: 06.764-430 </p>
             </div>
             <div class="contact-footer">
                 <span><i class="fa-solid fa-user"></i> Contatos</span>
