--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <img src="IMG-20220609-WA0000-removebg-preview.png" alt="logo da Lutech" class="logo-footer">
             <div class="address">
                 <span><i class="fa-solid fa-location-dot"></i> Endereço</span>
-                <p>Rua shigueki kadumoto, 73 - Parque Albina, Taboão da Serra - SP <br>
+                <p>Rua Shigueki Kadumoto, 73 - Parque Albina, Taboão da Serra - SP <br>
                 CEP: 06.764-430 </p>
             </div>
             <div class="contact-footer">
